--- a/src/dashboard/Kelolauser.html
+++ b/src/dashboard/Kelolauser.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kelola User</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <script defer src="admin.js"></script>
+    <script defer src="admin.js"></script> <!-- Jika Anda ingin menggunakan admin.js -->
 </head>
 <body class="bg-gray-100">
     <!-- Sidebar -->
@@ -58,32 +58,83 @@
     </div>
 
     <script>
-        function editUser(button) {
-            const row = button.parentElement.parentElement;
-            const cells = row.getElementsByTagName('td');
-            const id = cells[0].innerText;
-            const name = cells[1].innerText;
-            const email = cells[2].innerText;
+        // Fungsi untuk mengedit user
+        // Fungsi untuk mengedit user
+function editUser(button) {
+    const row = button.parentElement.parentElement;
+    const cells = row.getElementsByTagName("td");
+    const id = cells[0].innerText;
+    const name = cells[1].innerText;
+    const email = cells[2].innerText;
 
-            const newName = prompt("Edit Nama:", name);
-            const newEmail = prompt("Edit Email:", email);
+    // Meminta input baru untuk nama dan email
+    const newName = prompt("Edit Nama:", name);
+    const newEmail = prompt("Edit Email:", email);
 
-            if (newName !== null && newEmail !== null) {
-                cells[1].innerText = newName;
-                cells[2].innerText = newEmail;
-                // Tambahkan logika untuk menyimpan perubahan ke server di sini
-            }
-        }
+    // Jika ada perubahan, update tampilan dan kirim perubahan ke server
+    if (newName !== null && newEmail !== null) {
+        cells[1].innerText = newName;
+        cells[2].innerText = newEmail;
 
-        function deleteUser(button) {
+        // Kirim perubahan ke server
+        fetch(`http://localhost:8080/user/${id}`, {  // Backend URL yang benar
+            method: 'PUT',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({
+                name: newName,
+                email: newEmail
+            }),
+        })
+        .then(response => response.json())
+        .then(data => {
+            alert('User update successfully');
+        })
+        .catch(error => {
+             alert('Error updating user: ' + error);
+         });
+    }
+}
+
+// Fungsi untuk menghapus user
+function deleteUser(button) {
+    const row = button.parentElement.parentElement;
+    const id = row.getElementsByTagName('td')[0].innerText;
+
+    if (confirm(`Apakah Anda yakin ingin menghapus user dengan ID ${id}?`)) {
+        // Kirim permintaan untuk menghapus user ke server
+        fetch(`http://localhost:8080/user/${id}`, {  // Backend URL yang benar
+            method: 'DELETE',
+        })
+        .then(response => response.json())
+        .then(data => {
+            row.remove();
+            alert('User deleted successfully');
+        })
+        .catch(error => {
+            alert('Error deleting user: ' + error);
+        });
+    }
+}
+
             const row = button.parentElement.parentElement;
             const id = row.getElementsByTagName('td')[0].innerText;
-
+    
             if (confirm(`Apakah Anda yakin ingin menghapus user dengan ID ${id}?`)) {
-                row.remove();
-                // Tambahkan logika untuk menghapus user dari server di sini
+                // Kirim permintaan untuk menghapus user ke server
+                fetch(`/user/${id}`, {
+                    method: 'DELETE',
+                })
+                .then(response => response.json())
+                .then(data => {
+                    row.remove();
+                    alert('User deleted successfully');
+                })
+                .catch(error => {
+                    alert('Error deleting user: ' + error);
+                });
             }
-        }
     </script>
 </body>
 </html>
