--- a/src/dashboard/Kelolauser.html
+++ b/src/dashboard/Kelolauser.html
@@ -35,6 +35,7 @@
                                 <th class="py-2">ID</th>
                                 <th class="py-2">Nama</th>
                                 <th class="py-2">Email</th>
+                                <th class="py-2">Role</th>
                                 <th class="py-2">Aksi</th>
                             </tr>
                         </thead>
@@ -44,6 +45,7 @@
                                 <td class="py-2">1</td>
                                 <td class="py-2">John Doe</td>
                                 <td class="py-2">john@example.com</td>
+                                <td class="py-2">Admin</td>
                                 <td class="py-2">
                                     <button class="bg-blue-500 text-white px-4 py-2 rounded" onclick="editUser(this)">Edit</button>
                                     <button class="bg-red-500 text-white px-4 py-2 rounded" onclick="deleteUser(this)">Hapus</button>
