--- a/src/dashboard/Kelolauser.html
+++ b/src/dashboard/Kelolauser.html
@@ -5,31 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kelola User</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <script defer src="admin.js"></script> <!-- Jika Anda ingin menggunakan admin.js -->
+    <script defer src="admin.js"></script>
 </head>
 <body class="bg-gray-100">
     <!-- Sidebar -->
     <div class="flex h-screen">
-        <aside class="bg-yellow-500 w-64 p-4">
-            <h1 class="text-white text-2xl font-bold mb-6">Admin Dashboard</h1>
+        <aside class="bg-yellow-500 w-64 p-6">
+            <h1 class="text-white text-3xl font-bold mb-8">Admin Dashboard</h1>
             <nav>
                 <ul>
-                    <li class="mb-4"><a href="Dashboardadmin.html" class="text-white hover:text-gray-200">Dashboard</a></li>
-                    <li class="mb-4"><a href="Kelolauser.html" class="text-white hover:text-gray-200">Kelola User</a></li>
-                    <li class="mb-4"><a href="Keloladonasi.html" class="text-white hover:text-gray-200">Kelola Donasi</a></li>
-                    <li class="mb-4"><a href="Donatur.html" class="text-white hover:text-gray-200">Donatur</a></li>
+                    <li class="mb-4">
+                        <a href="Dashboardadmin.html" class="block text-white hover:bg-yellow-400 px-4 py-2 rounded-md">
+                            Dashboard
+                        </a>
+                    </li>
+                    <li class="mb-4">
+                        <a href="Kelolauser.html" class="block text-white hover:bg-yellow-400 px-4 py-2 rounded-md">
+                            Kelola User
+                        </a>
+                    </li>
+                    <li class="mb-4">
+                        <a href="Keloladonasi.html" class="block text-white hover:bg-yellow-400 px-4 py-2 rounded-md">
+                            Kelola Donasi
+                        </a>
+                    </li>
                 </ul>
             </nav>
         </aside>
 
         <!-- Main Content -->
         <main class="flex-1 p-6">
-            <!-- Kelola User Section -->
             <section id="kelola-user">
                 <h2 class="text-2xl font-bold mb-6">Kelola User</h2>
                 <div class="bg-white p-4 rounded shadow">
                     <h3 class="text-lg font-semibold mb-4">Daftar User</h3>
-                    <table class="min-w-full bg-white">
+                    <table class="min-w-full bg-white" id="user-table">
                         <thead>
                             <tr>
                                 <th class="py-2">ID</th>
@@ -40,18 +50,7 @@
                             </tr>
                         </thead>
                         <tbody id="user-table-body">
-                            <!-- Contoh data user -->
-                            <tr>
-                                <td class="py-2">1</td>
-                                <td class="py-2">John Doe</td>
-                                <td class="py-2">john@example.com</td>
-                                <td class="py-2">Admin</td>
-                                <td class="py-2">
-                                    <button class="bg-blue-500 text-white px-4 py-2 rounded" onclick="editUser(this)">Edit</button>
-                                    <button class="bg-red-500 text-white px-4 py-2 rounded" onclick="deleteUser(this)">Hapus</button>
-                                </td>
-                            </tr>
-                            <!-- Tambahkan data user lainnya di sini -->
+                            <!-- Data user akan ditambahkan di sini -->
                         </tbody>
                     </table>
                 </div>
@@ -61,82 +60,105 @@
 
     <script>
         // Fungsi untuk mengedit user
-        // Fungsi untuk mengedit user
-function editUser(button) {
-    const row = button.parentElement.parentElement;
-    const cells = row.getElementsByTagName("td");
-    const id = cells[0].innerText;
-    const name = cells[1].innerText;
-    const email = cells[2].innerText;
+        function editUser(button) {
+            const row = button.parentElement.parentElement;
+            const cells = row.getElementsByTagName("td");
+            const id = cells[0].innerText;
+            const name = cells[1].innerText;
+            const email = cells[2].innerText;
+            const currentRole = cells[3].innerText;
 
-    // Meminta input baru untuk nama dan email
-    const newName = prompt("Edit Nama:", name);
-    const newEmail = prompt("Edit Email:", email);
+            const newRole = prompt("Edit Role (admin/donatur):", currentRole);
 
-    // Jika ada perubahan, update tampilan dan kirim perubahan ke server
-    if (newName !== null && newEmail !== null) {
-        cells[1].innerText = newName;
-        cells[2].innerText = newEmail;
+            if (newRole !== null && newRole !== currentRole) {
+                if (newRole !== "admin" && newRole !== "donatur") {
+                    alert("Role yang valid adalah 'admin' atau 'donatur'.");
+                    return;
+                }
 
-        // Kirim perubahan ke server
-        fetch(`http://localhost:8080/user/${id}`, {  // Backend URL yang benar
-            method: 'PUT',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({
-                name: newName,
-                email: newEmail
-            }),
-        })
-        .then(response => response.json())
-        .then(data => {
-            alert('User update successfully');
-        })
-        .catch(error => {
-             alert('Error updating user: ' + error);
-         });
-    }
-}
+                cells[3].innerText = newRole;
 
-// Fungsi untuk menghapus user
-function deleteUser(button) {
-    const row = button.parentElement.parentElement;
-    const id = row.getElementsByTagName('td')[0].innerText;
+                const payload = {
+                    name: name,
+                    email: email,
+                    role: newRole
+                };
 
-    if (confirm(`Apakah Anda yakin ingin menghapus user dengan ID ${id}?`)) {
-        // Kirim permintaan untuk menghapus user ke server
-        fetch(`http://localhost:8080/user/${id}`, {  // Backend URL yang benar
-            method: 'DELETE',
-        })
-        .then(response => response.json())
-        .then(data => {
-            row.remove();
-            alert('User deleted successfully');
-        })
-        .catch(error => {
-            alert('Error deleting user: ' + error);
-        });
-    }
-}
+                fetch(`http://localhost:8080/users/${id}`, {
+                    method: 'PUT',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(payload),
+                })
+                .then(response => {
+                    if (!response.ok) {
+                        return response.text().then(errText => {
+                            throw new Error(errText || 'Unknown error');
+                        });
+                    }
+                    alert('User role updated successfully');
+                })
+                .catch(error => {
+                    alert('Error updating user role: ' + error.message);
+                });
+            }
+        }
 
+        // Fungsi untuk menghapus user
+        function deleteUser(button) {
             const row = button.parentElement.parentElement;
             const id = row.getElementsByTagName('td')[0].innerText;
-    
+
             if (confirm(`Apakah Anda yakin ingin menghapus user dengan ID ${id}?`)) {
-                // Kirim permintaan untuk menghapus user ke server
-                fetch(`/user/${id}`, {
+                fetch(`http://localhost:8080/users/${id}`, {
                     method: 'DELETE',
                 })
-                .then(response => response.json())
-                .then(data => {
+                .then(response => {
+                    if (!response.ok) {
+                        return response.json().then(err => { throw new Error(err.error || 'Failed to delete user') });
+                    }
                     row.remove();
                     alert('User deleted successfully');
                 })
                 .catch(error => {
-                    alert('Error deleting user: ' + error);
+                    alert('Error deleting user: ' + error.message);
                 });
             }
+        }
+
+        document.addEventListener("DOMContentLoaded", () => {
+            const apiUrl = "http://localhost:8080/users";
+
+            fetch(apiUrl)
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Failed to load user data');
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    const tableBody = document.querySelector("#user-table-body");
+
+                    data.forEach(user => {
+                        const row = tableBody.insertRow();
+                        row.innerHTML = `
+                            <td class="py-2">${user.id}</td>
+                            <td class="py-2">${user.name}</td>
+                            <td class="py-2">${user.email}</td>
+                            <td class="py-2">${user.role}</td>
+                            <td class="py-2">
+                                <button class="bg-blue-500 text-white px-4 py-2 rounded" onclick="editUser(this)">Edit</button>
+                                <button class="bg-red-500 text-white px-4 py-2 rounded" onclick="deleteUser(this)">Hapus</button>
+                            </td>
+                        `;
+                    });
+                })
+                .catch(error => {
+                    console.error("There was an error fetching user data:", error);
+                    alert("Failed to load user data. Please try again later.");
+                });
+        });
     </script>
 </body>
 </html>
