Update API endpoints to use production URL

--- a/src/dashboard/Dashboardadmin.html
+++ b/src/dashboard/Dashboardadmin.html
@@ -81,7 +81,7 @@
         }
       });
       document.addEventListener("DOMContentLoaded", () => {
-        const apiUrl = "http://localhost:8080/donations"; // API Endpoint
+        const apiUrl = "https://yayasan-three.vercel.app/donations"; // API Endpoint
       
         fetch(apiUrl)
           .then((response) => {
