--- a/src/dashboard/Keloladonasi.html
+++ b/src/dashboard/Keloladonasi.html
@@ -72,7 +72,7 @@
     
 
     <script>
-        const apiUrl = "http://localhost:8080/donations";
+        const apiUrl = "https://yayasan-three.vercel.app/donations";
 
         document.addEventListener("DOMContentLoaded", () => {
             loadDonations();
