--- a/src/dashboard/Kelolauser.html
+++ b/src/dashboard/Kelolauser.html
@@ -84,7 +84,7 @@
                     role: newRole
                 };
 
-                fetch(`http://localhost:8080/users/${id}`, {
+                fetch(`https://yayasan-three.vercel.app/users/${id}`, {
                     method: 'PUT',
                     headers: {
                         'Content-Type': 'application/json'
