--- a/src/dashboard/Dashboardadmin.html
+++ b/src/dashboard/Dashboardadmin.html
@@ -77,7 +77,7 @@
           sessionStorage.clear(); // Bersihkan sesi jika diperlukan
   
           // Redirect ke halaman login
-          window.location.href = "http://localhost:3000/";
+          window.location.href = "https://yayasan-three.vercel.app/login";
         }
       });
       document.addEventListener("DOMContentLoaded", () => {
