Update API URLs in dashboard to use production environment

--- a/src/dashboard/Kelolauser.html
+++ b/src/dashboard/Kelolauser.html
@@ -128,7 +128,7 @@
         }
 
         document.addEventListener("DOMContentLoaded", () => {
-            const apiUrl = "http://localhost:8080/users";
+            const apiUrl = "https://yayasan-three.vercel.app/users";
 
             fetch(apiUrl)
                 .then(response => {
